# PDF-parser

./: .gitignore  ANALYSIS_REPORT.md  README.md  analysis-report.md  pyproject.toml
.ralph/: @fix_plan.md
docs/plans/: 2026-02-21-financial-modeling-enhancements-design.md  2026-02-21-financial-modeling-enhancements-plan.md  2026-02-21-ifrs-parsing-design.md  2026-02-21-ifrs-parsing-plan.md
output/: 3QStrive.md
sec_parser/: cli.py  confidence.py  consistency.py  detect.py  edgar_client.py  gemini_client.py  ifrs_section_split.py  markdown_writer.py  metadata.py  normalize.py  pdf_extract.py  pipeline.py  programmatic.py  prompts.py  section_split.py  taxonomy.yaml  test_runner.py  validate.py  xbrl_taxonomy_map.yaml
tests/: conftest.py  test_confidence.py  test_consistency.py  test_detect.py  test_edgar_client.py  test_golden.py  test_ifrs_sections.py  test_integration.py  test_metadata.py  test_normalize.py  test_pipeline_ifrs.py  test_programmatic.py  test_validate.py
tests/fixtures/: company_facts_sample.json  submissions_sample.json
